atexit: Applied refaster patch to remove forbidden API calls.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/add_c_function_atexit@46970 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c